--- a/styles/styles.css
+++ b/styles/styles.css
@@ -735,8 +735,8 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
 
-  min-width: 528px;
-  min-height: 581px;
+  width: 528px;
+  height: 581px;
   padding: 40px;
 
   background: var(--white-color);
@@ -774,30 +774,37 @@ body {
   font-size: 12px;
   line-height: 1.16;
   letter-spacing: 0.01em;
-  padding-top: 10px;
-  padding-bottom: 4px;
+  margin-bottom: 4px;
 }
 
-.callback-thumb {
+.callback-thumb,
+.callback-thumb-comments {
   display: flex;
   flex-direction: column;
   color: var(--title-color);
+  margin-bottom: 10px;
 }
+
 .callback-input-box .callback-input,
 .comments {
   border: 1px solid rgba(33, 33, 33, 0.2);
   box-sizing: border-box;
   border-radius: 4px;
   padding: 5px 10px;
+  outline-width: 0px;
+}
+.callback-thumb-comments {
+  margin-bottom: 20px;
 }
 .comments {
   resize: none;
-  transition: outline-color var(--transition-timing) var(--cubic-bezier-first);
+  transition: border-color var(--transition-timing) var(--cubic-bezier-first);
 }
 .callback-input-box {
   position: relative;
 }
-.callback-thumb .icon {
+.callback-thumb .icon,
+.callback-thumb-comments .icon {
   position: absolute;
   top: 50%;
   left: 12px;
@@ -809,9 +816,8 @@ body {
   width: 100%;
   height: 40px;
   padding-left: 42px;
-  outline-width: 1px;
   transition: color var(--transition-timing) var(--cubic-bezier-first);
-  transition: outline-color var(--transition-timing) var(--cubic-bezier-first);
+  transition: border-color var(--transition-timing) var(--cubic-bezier-first);
 }
 
 .icon-close {
@@ -823,9 +829,9 @@ body {
   color: var(--brand-primary-color);
 }
 .callback-input-box > .callback-input:focus,
-.callback-thumb > .comments:focus {
-  transition: outline-color var(--transition-timing) var(--cubic-bezier-first);
-  outline-color: var(--brand-primary-color);
+.callback-thumb-comments > .comments:focus {
+  transition: border-color var(--transition-timing) var(--cubic-bezier-first);
+  border-color: var(--brand-primary-color);
 }
 .callback-input:focus + .icon {
   transition: color var(--transition-timing) var(--cubic-bezier-first);
@@ -843,14 +849,12 @@ body {
   transition: box-shadow var(--transition-timing) var(--cubic-bezier-first);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
-.license {
-  padding-top: 20px;
-  padding-bottom: 30px;
-}
+
 .license-label {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 30px;
 }
 
 .license-link {
@@ -872,11 +876,16 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  cursor: pointer;
 
   /* background-color: var(--white-color);
   background-image: url("../images/check.svg"); */
   /* background-size: contain;
   background-origin: border-box; */
+}
+.license-checkbox:focus + .checkbox-icon,
+.license-checkbox:hover + .checkbox-icon {
+  border-color: var(--brand-primary-color);
 }
 
 .license-checkbox:checked + .checkbox-icon {
